--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0">
   <title>Scotty's Keyboard Shuffle</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css?v=2">
 </head>
 <body>
   <div id="app">
@@ -17,8 +17,8 @@
   <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
 
   <!-- Game scripts -->
-  <script src="words.js"></script>
-  <script src="peer.js"></script>
-  <script src="game.js"></script>
+  <script src="words.js?v=2"></script>
+  <script src="peer.js?v=2"></script>
+  <script src="game.js?v=2"></script>
 </body>
 </html>
